[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/nodes/FramePartsContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/nodes/AdvancedSlider.gd" type="Script" id=4]
[ext_resource path="res://src/nodes/AdvancedSpinBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/nodes/SettingsContainer.gd" type="Script" id=6]
[ext_resource path="res://src/nodes/AdvancedLineEdit.gd" type="Script" id=7]
[ext_resource path="res://src/nodes/AdvansedCheckButton.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 24.0
content_margin_right = 0.0
bg_color = Color( 0.145098, 0.156863, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.117647, 0.12549, 0.133333, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="SettingsContainer" type="PanelContainer"]
margin_left = 578.0
margin_right = 1026.0
margin_bottom = 542.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )
script = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 24.0
margin_right = 448.0
margin_bottom = 542.0
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 424.0
margin_bottom = 490.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Composition" type="VBoxContainer" parent="ScrollContainer/VBox"]
margin_right = 424.0
margin_bottom = 144.0
rect_min_size = Vector2( 194, 0 )
custom_constants/separation = 8
alignment = 2

[node name="Header" type="ColorRect" parent="ScrollContainer/VBox/Composition"]
margin_right = 424.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0.266667, 0.305882, 0.384314, 1 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/Composition/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
rect_min_size = Vector2( 0, 28 )
text = "Composition"
valign = 1

[node name="MergeContainer" type="HBoxContainer" parent="ScrollContainer/VBox/Composition"]
margin_top = 36.0
margin_right = 424.0
margin_bottom = 82.0
custom_constants/separation = 12

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/Composition/MergeContainer"]
margin_right = 18.0
margin_bottom = 46.0
rect_min_size = Vector2( 18, 0 )

[node name="MergeXSliderContainer" type="VBoxContainer" parent="ScrollContainer/VBox/Composition/MergeContainer"]
margin_left = 30.0
margin_right = 394.0
margin_bottom = 46.0
hint_tooltip = "How much of the corners and sides \"take\" of  the central part:
maximum - no central part used,
minimum - only central part is used"
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="ScrollContainer/VBox/Composition/MergeContainer/MergeXSliderContainer" groups=["blockable"]]
margin_right = 364.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
text = " Merge pixels"
valign = 2

[node name="MergeSliderX" type="HSlider" parent="ScrollContainer/VBox/Composition/MergeContainer/MergeXSliderContainer" groups=["blockable"]]
margin_top = 30.0
margin_right = 364.0
margin_bottom = 46.0
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 0.5
step = 0.01
value = 0.25
scrollable = false
tick_count = 11
ticks_on_borders = true
script = ExtResource( 4 )

[node name="MergeYSliderContainer" type="VBoxContainer" parent="ScrollContainer/VBox/Composition/MergeContainer"]
visible = false
margin_left = 302.0
margin_right = 592.0
margin_bottom = 46.0
hint_tooltip = "How much of the corners and sides \"take\" of  the central part:
maximum - no central part used,
minimum - only central part is used"
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="ScrollContainer/VBox/Composition/MergeContainer/MergeYSliderContainer" groups=["blockable"]]
margin_right = 290.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
text = "Merge pixels Y"
valign = 2

[node name="MergeSliderY" type="HSlider" parent="ScrollContainer/VBox/Composition/MergeContainer/MergeYSliderContainer" groups=["blockable"]]
margin_top = 30.0
margin_right = 290.0
margin_bottom = 46.0
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 0.5
step = 0.01
value = 0.25
scrollable = false
tick_count = 11
ticks_on_borders = true
script = ExtResource( 4 )

[node name="Spacer3" type="Control" parent="ScrollContainer/VBox/Composition/MergeContainer"]
margin_left = 406.0
margin_right = 424.0
margin_bottom = 46.0
rect_min_size = Vector2( 18, 0 )

[node name="OverlapContainer" type="HBoxContainer" parent="ScrollContainer/VBox/Composition"]
margin_top = 90.0
margin_right = 424.0
margin_bottom = 136.0
custom_constants/separation = 12

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/Composition/OverlapContainer"]
margin_right = 18.0
margin_bottom = 46.0
rect_min_size = Vector2( 18, 0 )

[node name="OverlapXSliderContainer" type="VBoxContainer" parent="ScrollContainer/VBox/Composition/OverlapContainer"]
margin_left = 30.0
margin_right = 394.0
margin_bottom = 46.0
hint_tooltip = "How much of the central part will be “shoved” under the corners and side. 
Only matters if sides have some transparency."
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="ScrollContainer/VBox/Composition/OverlapContainer/OverlapXSliderContainer" groups=["blockable"]]
margin_right = 364.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
text = " Overlap pixels"
valign = 2

[node name="OverlapSliderX" type="HSlider" parent="ScrollContainer/VBox/Composition/OverlapContainer/OverlapXSliderContainer" groups=["blockable"]]
margin_top = 30.0
margin_right = 364.0
margin_bottom = 46.0
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 0.5
step = 0.01
value = 0.25
scrollable = false
tick_count = 11
ticks_on_borders = true
script = ExtResource( 4 )

[node name="OverlapYSliderContainer" type="VBoxContainer" parent="ScrollContainer/VBox/Composition/OverlapContainer"]
visible = false
margin_left = 302.0
margin_right = 592.0
margin_bottom = 46.0
hint_tooltip = "How much of the central part will be “shoved” under the corners and side. 
Only matters if sides have some transparency."
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="ScrollContainer/VBox/Composition/OverlapContainer/OverlapYSliderContainer" groups=["blockable"]]
margin_right = 290.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
text = " Overlap pixels Y"
valign = 2

[node name="OverlapSliderY" type="HSlider" parent="ScrollContainer/VBox/Composition/OverlapContainer/OverlapYSliderContainer" groups=["blockable"]]
margin_top = 30.0
margin_right = 290.0
margin_bottom = 46.0
focus_mode = 0
mouse_default_cursor_shape = 2
max_value = 0.5
step = 0.01
value = 0.25
scrollable = false
tick_count = 11
ticks_on_borders = true
script = ExtResource( 4 )

[node name="Spacer3" type="Control" parent="ScrollContainer/VBox/Composition/OverlapContainer"]
margin_left = 406.0
margin_right = 424.0
margin_bottom = 46.0
rect_min_size = Vector2( 18, 0 )

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/Composition"]
margin_top = 144.0
margin_right = 424.0
margin_bottom = 144.0

[node name="OutputSize" type="VBoxContainer" parent="ScrollContainer/VBox" groups=["corners_settings", "overlay_settings"]]
margin_top = 164.0
margin_right = 424.0
margin_bottom = 328.0
hint_tooltip = "If you have multiple rows in your input image, the result can and will be randomized. 
(If aspect ratio of a texture is more than 1:4 for a 4-part preset)"
custom_constants/separation = 8

[node name="Header" type="ColorRect" parent="ScrollContainer/VBox/OutputSize"]
margin_right = 424.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0.266667, 0.305882, 0.384314, 1 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/OutputSize/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
rect_min_size = Vector2( 0, 28 )
text = "Output tile"
valign = 1

[node name="SubtileSpacing" type="HBoxContainer" parent="ScrollContainer/VBox/OutputSize"]
margin_top = 36.0
margin_right = 424.0
margin_bottom = 68.0

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing"]
margin_right = 18.0
margin_bottom = 32.0
rect_min_size = Vector2( 18, 0 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing" groups=["blockable"]]
margin_left = 22.0
margin_right = 150.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
size_flags_vertical = 1
text = "Subtile spacing"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing" groups=["blockable"]]
visible = false
margin_left = 154.0
margin_right = 166.0
margin_bottom = 40.0
size_flags_vertical = 1
text = "X:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpacingXSpinBox" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing" instance=ExtResource( 5 )]
margin_left = 154.0
margin_right = 402.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 4
min_value = 0.0
suffix = "px"

[node name="PxLabel" type="Label" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing" groups=["blockable"]]
visible = false
margin_left = 567.0
margin_right = 582.0
margin_bottom = 40.0
size_flags_vertical = 1
text = "px"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Control" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing"]
visible = false
margin_left = 564.0
margin_right = 582.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="Label3" type="Label" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing" groups=["blockable"]]
visible = false
margin_left = 571.0
margin_right = 582.0
margin_bottom = 40.0
size_flags_vertical = 1
text = "Y:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpacingYSpinBox" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing" instance=ExtResource( 5 )]
visible = false
margin_left = 396.0
margin_top = 4.0
margin_right = 582.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 4
min_value = 0.0
suffix = "px"

[node name="PxLabel2" type="Label" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing" groups=["blockable"]]
visible = false
margin_left = 589.0
margin_right = 604.0
margin_bottom = 40.0
size_flags_vertical = 1
text = "px"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="ScrollContainer/VBox/OutputSize/SubtileSpacing"]
margin_left = 406.0
margin_right = 424.0
margin_bottom = 32.0
rect_min_size = Vector2( 18, 0 )

[node name="OutputResize" type="HBoxContainer" parent="ScrollContainer/VBox/OutputSize"]
margin_top = 76.0
margin_right = 424.0
margin_bottom = 116.0

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/OutputSize/OutputResize"]
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/OutputSize/OutputResize"]
margin_left = 22.0
margin_top = 13.0
margin_right = 150.0
margin_bottom = 27.0
rect_min_size = Vector2( 128, 0 )
text = "Output resize"

[node name="OutpuResizeButton" type="CheckButton" parent="ScrollContainer/VBox/OutputSize/OutputResize"]
margin_left = 154.0
margin_right = 230.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="Spacer2" type="Control" parent="ScrollContainer/VBox/OutputSize/OutputResize"]
margin_left = 234.0
margin_right = 252.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="ResizeSpinBoxX" parent="ScrollContainer/VBox/OutputSize/OutputResize" instance=ExtResource( 5 )]
margin_left = 256.0
margin_top = 4.0
margin_right = 402.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 4
min_value = 2.0
value = 2.0
prefix = "Resize to "
suffix = " px"

[node name="PxLabel" type="Label" parent="ScrollContainer/VBox/OutputSize/OutputResize" groups=["blockable"]]
visible = false
margin_left = 563.0
margin_right = 582.0
margin_bottom = 40.0
size_flags_vertical = 1
text = "px "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="ScrollContainer/VBox/OutputSize/OutputResize"]
margin_left = 406.0
margin_right = 424.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="SmoothingContainer" type="HBoxContainer" parent="ScrollContainer/VBox/OutputSize"]
margin_top = 124.0
margin_right = 424.0
margin_bottom = 164.0
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/OutputSize/SmoothingContainer"]
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/OutputSize/SmoothingContainer"]
margin_left = 22.0
margin_top = 13.0
margin_right = 150.0
margin_bottom = 27.0
rect_min_size = Vector2( 128, 0 )
text = "Smoothing"

[node name="Smoothing" type="CheckButton" parent="ScrollContainer/VBox/OutputSize/SmoothingContainer" groups=["blockable"]]
margin_left = 154.0
margin_right = 230.0
margin_bottom = 40.0
hint_tooltip = "Disable for pixelart, enable for anitaliased."
mouse_filter = 1
shortcut_in_tooltip = false
script = ExtResource( 8 )

[node name="Spacer3" type="Control" parent="ScrollContainer/VBox/OutputSize/SmoothingContainer"]
margin_left = 234.0
margin_right = 252.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="Effects" type="VBoxContainer" parent="ScrollContainer/VBox" groups=["corners_settings", "overlay_settings"]]
visible = false
margin_top = 372.0
margin_right = 464.0
margin_bottom = 400.0
hint_tooltip = "If you have multiple rows in your input image, the result can and will be randomized. 
(If aspect ratio of a texture is more than 1:4 for a 4-part preset)"
custom_constants/separation = 8

[node name="Header" type="ColorRect" parent="ScrollContainer/VBox/Effects"]
margin_right = 464.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0.266667, 0.305882, 0.384314, 1 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/Effects/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
rect_min_size = Vector2( 0, 28 )
text = "Effects"
valign = 1

[node name="Randomization" type="VBoxContainer" parent="ScrollContainer/VBox" groups=["corners_settings", "overlay_settings"]]
margin_top = 348.0
margin_right = 424.0
margin_bottom = 470.0
hint_tooltip = "If you have multiple rows in your input image, the alternatives can be used as either random variants or for animation."
custom_constants/separation = 8

[node name="Header" type="ColorRect" parent="ScrollContainer/VBox/Randomization"]
margin_right = 424.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0.266667, 0.305882, 0.384314, 1 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/Randomization/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
rect_min_size = Vector2( 0, 28 )
text = "Randomization / frames"
valign = 1

[node name="SeedContainer" type="HBoxContainer" parent="ScrollContainer/VBox/Randomization"]
margin_top = 36.0
margin_right = 424.0
margin_bottom = 76.0
hint_tooltip = "Use some interger seed to have consistent randomization result"

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/Randomization/SeedContainer"]
margin_right = 18.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/Randomization/SeedContainer"]
margin_left = 22.0
margin_top = 7.0
margin_right = 150.0
margin_bottom = 33.0
rect_min_size = Vector2( 128, 26 )
text = "Predefined seed"
valign = 1

[node name="SeedCheckButton" type="CheckButton" parent="ScrollContainer/VBox/Randomization/SeedContainer" groups=["blockable"]]
margin_left = 154.0
margin_right = 230.0
margin_bottom = 40.0
hint_tooltip = "Use some interger seed to have consistent randomization result"
shortcut_in_tooltip = false
script = ExtResource( 8 )

[node name="Spacer2" type="Control" parent="ScrollContainer/VBox/Randomization/SeedContainer"]
margin_left = 234.0
margin_right = 252.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="SeedLineEdit" type="LineEdit" parent="ScrollContainer/VBox/Randomization/SeedContainer" groups=["blockable"]]
margin_left = 256.0
margin_top = 4.0
margin_right = 318.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 32 )
hint_tooltip = "Use some interger seed to have consistent randomization result"
size_flags_horizontal = 3
size_flags_vertical = 4
max_length = 16
editable = false
placeholder_text = "Integer value"
placeholder_alpha = 0.4
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 7 )

[node name="SeedButton" type="Button" parent="ScrollContainer/VBox/Randomization/SeedContainer" groups=["blockable"]]
margin_left = 322.0
margin_top = 4.0
margin_right = 402.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 32 )
size_flags_vertical = 4
disabled = true
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer3" type="Control" parent="ScrollContainer/VBox/Randomization/SeedContainer"]
margin_left = 406.0
margin_right = 424.0
margin_bottom = 40.0
rect_min_size = Vector2( 18, 0 )

[node name="FramesSetupContainer" type="HBoxContainer" parent="ScrollContainer/VBox/Randomization"]
margin_top = 84.0
margin_right = 424.0
margin_bottom = 110.0
hint_tooltip = "Setup max number of animation frames"

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/Randomization/FramesSetupContainer"]
margin_right = 18.0
margin_bottom = 26.0
rect_min_size = Vector2( 18, 0 )

[node name="Label" type="Label" parent="ScrollContainer/VBox/Randomization/FramesSetupContainer"]
margin_left = 22.0
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 128, 26 )
text = "Frames"
valign = 1

[node name="Spacer3" type="Control" parent="ScrollContainer/VBox/Randomization/FramesSetupContainer"]
margin_left = 154.0
margin_right = 172.0
margin_bottom = 26.0
rect_min_size = Vector2( 18, 0 )

[node name="FramesSpinBox" parent="ScrollContainer/VBox/Randomization/FramesSetupContainer" instance=ExtResource( 5 )]
margin_left = 176.0
margin_right = 402.0
margin_bottom = 26.0
max_value = 64.0

[node name="Spacer4" type="Control" parent="ScrollContainer/VBox/Randomization/FramesSetupContainer"]
margin_left = 406.0
margin_right = 424.0
margin_bottom = 26.0
rect_min_size = Vector2( 18, 0 )

[node name="PartSetupContainer" type="HBoxContainer" parent="ScrollContainer/VBox/Randomization"]
margin_top = 118.0
margin_right = 424.0
margin_bottom = 122.0

[node name="Spacer" type="Control" parent="ScrollContainer/VBox/Randomization/PartSetupContainer"]
margin_right = 18.0
margin_bottom = 4.0
rect_min_size = Vector2( 18, 0 )

[node name="FramesContainer" type="VBoxContainer" parent="ScrollContainer/VBox/Randomization/PartSetupContainer"]
margin_left = 22.0
margin_right = 424.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FramePartsContainer" parent="ScrollContainer/VBox/Randomization/PartSetupContainer/FramesContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 402.0
margin_bottom = 4.0
custom_styles/panel = SubResource( 1 )

[node name="Spacer2" type="Control" parent="ScrollContainer/VBox/Randomization/PartSetupContainer"]
visible = false
margin_left = 26.0
margin_right = 44.0
rect_min_size = Vector2( 18, 0 )

[node name="VSpacer" type="Control" parent="ScrollContainer/VBox"]
margin_top = 490.0
margin_right = 424.0
margin_bottom = 490.0

[connection signal="released" from="ScrollContainer/VBox/Composition/MergeContainer/MergeXSliderContainer/MergeSliderX" to="." method="_on_MergeSliderX_released"]
[connection signal="released" from="ScrollContainer/VBox/Composition/OverlapContainer/OverlapXSliderContainer/OverlapSliderX" to="." method="_on_OverlapSliderX_released"]
[connection signal="value_changed_no_silence" from="ScrollContainer/VBox/OutputSize/SubtileSpacing/SpacingXSpinBox" to="." method="_on_SpacingXSpinBox_value_changed_no_silence"]
[connection signal="toggled_no_silence" from="ScrollContainer/VBox/OutputSize/OutputResize/OutpuResizeButton" to="." method="_on_OutpuResizeButton_toggled_no_silence"]
[connection signal="value_changed_no_silence" from="ScrollContainer/VBox/OutputSize/OutputResize/ResizeSpinBoxX" to="." method="_on_ResizeSpinBoxX_value_changed_no_silence"]
[connection signal="toggled_no_silence" from="ScrollContainer/VBox/OutputSize/SmoothingContainer/Smoothing" to="." method="_on_Smoothing_toggled_no_silence"]
[connection signal="toggled_no_silence" from="ScrollContainer/VBox/Randomization/SeedContainer/SeedCheckButton" to="." method="_on_SeedCheckButton_toggled_no_silence"]
[connection signal="text_changed_no_silence" from="ScrollContainer/VBox/Randomization/SeedContainer/SeedLineEdit" to="." method="_on_SeedLineEdit_text_changed_no_silence"]
[connection signal="value_changed_no_silence" from="ScrollContainer/VBox/Randomization/FramesSetupContainer/FramesSpinBox" to="." method="_on_FramesSpinBox_value_changed_no_silence"]
